--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,5 +1,5 @@
 .product{
-    border: 2px solid green;
+    border: 2px solid #3f8aec;
     border-radius: 20px;
     padding: 20px;
     position: relative;
@@ -17,8 +17,19 @@
     bottom: 0;
     left: 0;
     width: 100%;
+    margin: 0;
+    text-align: center;
 }
+
 .button{
-    width: 90%;
+    background-color: #3f8aec;
+    width: 100%;
     height: 40px;
+    border: 0;
+    border-radius: 0 0 15px 15px;
+    font-weight: 700;
+}
+.button:hover{
+    background-color: #305280;
+    color: white;
 }
